--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,8 +10,36 @@
     }
 
     header {
+        /* display: flex; */
         display: none;
+        flex-direction: column;
+        align-items: center;
         padding: 0;
+        position: fixed;
+        height: 100vh;
+        z-index: 10000;
+        background-color: aliceblue;
+    }
+
+    header .logo, footer .logo {
+        display: none;
+    }
+
+    header nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        height: 50vh;
+        margin: auto;
+    }
+
+    header nav a {
+        width: 90%;
+        margin: 10px auto;
+        font-size: 32px;
+        text-align: center;
     }
 
     footer {
@@ -26,8 +54,14 @@
         align-items: center;
     }
 
-    header nav a, footer nav a {
+    footer nav a {
         font-size: 18px;
+    }
+
+    .editor-mode {
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
     }
     
 
@@ -41,6 +75,11 @@
         height: 300px;
         width: 100%;
         border-radius: 0;
+        text-align: center;
+    }
+
+    .slider-img img {
+        height: 300px;
     }
 
     .slider-txt {
@@ -48,6 +87,45 @@
         bottom: 60px;
         left: 0;
         padding: 0 10px;
+    }
+
+    .burger-button {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        position: absolute !important;
+        right: 20px;
+        top: 20px;
+        z-index: 100000;
+        background: none;
+        border-radius: 5px;
+        border: none;
+        cursor: pointer;
+    }
+
+    .burger-bar {
+        width: 50px;
+        height: 8px;
+        background-color: var(--w);
+        border-radius: 20px;
+        transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    .burger-button.cross .burger-bar:nth-child(1) {
+        background-color: var(--r);
+        transform: rotate(45deg) translate(15px, 9.5px);
+    }
+
+    .burger-button.cross .burger-bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .burger-button.cross .burger-bar:nth-child(3) {
+        background-color: var(--r);
+        transform: rotate(-45deg) translate(15px, -10px);
     }
 
     /* CARD */
@@ -74,12 +152,12 @@
     }
 
     .card-img {
-        height: 150px;
         width: 100%;
+        text-align: center;
+        height: 150px !important;
     }
 
     .card-img img{
-        height: auto;
         width: 100%;
     }
 
@@ -108,6 +186,11 @@
         width: 100%;
         margin: 0 !important;
         border-radius: 0;
+        text-align: center;
+    }
+
+    .president-img img {
+        width: 100%;
     }
 
     .president-name {
@@ -121,42 +204,82 @@
     }
 
     .president-desc {
-        width: 100%;
+        width: 90%;
         height: auto;
-        margin: 14px;
+        margin: 12px auto;
     }
 
     .president-desc p {
         font-size: 10px;
+        text-align: justify;
     }
+
+    .contact-container {
+        border-radius: 0;
+        width: 100%;
+        height: 300px;
+        background-color: var(--w);
+        box-shadow: 0 0 0px var(--k);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contact-name {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+        color: var(--b);
+        font-weight: bold;
+        width: 50%;
+    }
+
+    .contact-name img {
+        height: 100px;
+    }
+
+    .contact-txt {
+        font-size: 40px;
+        top: 5%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: max-content;
+    }
+
 
     /* EVENT PAGE */
     .search-container {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
+        width: 90%;
+        margin: 5px auto;
     }
 
     .search-container span:first-child {
         font-size: 20px;
     }
 
-    .search-container span input {
-        width: 100%;
+    .search-container span, .search-container span input {
+        width: 90%;
     }
 
     .event-container {
         flex-direction: column;
         width: 100%;
+        justify-content:flex-start;
     }
 
     .event-card {
-        width: 100%;
-        margin: 10px 0;
+        width: 90%;
+        margin: 5px auto;
+        height: auto;
     }
 
     .event-category {
-        width: 100%;
+        width: 90%;
         padding: 5px 10px;
+
     }
 
     .event-title {
@@ -164,7 +287,12 @@
     }
 
     .event-img {
-        height: 200px;
+        height: 150px;
+        width: 100%;
+    }
+
+    .event-img img, .event-info {
+        width: 100%;
     }
 
     /* PROGRAMME PAGE */
